--- a/main.html
+++ b/main.html
@@ -9,5 +9,15 @@
 	<script src="js/app.js"></script>
 </head>
 <body>
+	<div class="main">
+		<div class="ryu">	
+			<div class="ryu-still"></div>
+			<div class="ryu-ready"></div>
+			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
+		</div>
+		<div class="hadouken"></div>
+	</div>
+	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
 </html>
