to other computer

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>StreetFighter</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
@@ -17,6 +17,12 @@
 			<div class="ryu-cool"></div>
 		</div>
 		<div class="hadouken"></div>
+		<div class="text-content">
+			<div class="how-to">
+				<p>Click on Ryu to make him throw a Hadouken.</p>
+				<p>Press and hold down the "x" key to make him strike his cool pose!</p>
+			</div>
+		</div>
 	</div>
 	<audio id="hadouken-sound" src="sound/hadouken.mp3">
 </body>
