--- a/main.html
+++ b/main.html
@@ -10,19 +10,19 @@
 </head>
 <body>
 	<div class="main">
-		<div class="ryu">	
-			<div class="ryu-still"></div>
-			<div class="ryu-ready"></div>
-			<div class="ryu-throwing"></div>
-			<div class="ryu-cool"></div>
-		</div>
-		<div class="hadouken"></div>
-	</div>
-		</div>
-		<div class="text-content">
-			<div class="how-to">
-				<p>Click on Ryu to make him throw a Hadouken.</p>
-				<p>Press and hold down the "x" key to make him strike his cool pose!</p>
+		<div class="ryu-container">
+			<div class="ryu">	
+				<div class="ryu-still"></div>
+				<div class="ryu-ready"></div>
+				<div class="ryu-throwing"></div>
+				<div class="ryu-cool"></div>
+			</div>
+			<div class="hadouken"></div>
+			<div class="text-content">
+				<div class="how-to">
+					<p>Click on Ryu to make him throw a Hadouken.</p>
+					<p>Press and hold down the "x" key to make him strike his cool pose!</p>
+				</div>
 			</div>
 		</div>
 	</div>
