--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
 			<div class="hadouken"></div>
 			<div class="text-content">
 				<div class="how-to">
-					<p class="click">Click on Ryu to make him throw a Hadouken.</p>
-					<p class="hold">Press and hold down the "x" key to make him strike his cool pose!</p>
+					<p>Click on Ryu to make him throw a Hadouken.</p>
+					<p>Press and hold down the "x" key to make him strike his cool pose!</p>
 				</div>
 			</div>
 		</div>
